--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -85,10 +85,13 @@ jobs:
       run: |
         ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
         ECR_URL=$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO
+
         sed -i "s|image: .*|image: ${ECR_URL}:${{ env.BUILD_TAG }}|" kubernetes/frontend/deployment.yaml
+
         git config --global user.email "mspr9773@gmail.com"
         git config --global user.name "M Surya Prasad"
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+
         git add kubernetes/frontend/deployment.yaml
-        git commit -m "Update frontend image to ${{ env.BUILD_TAG }}" || echo "No changes to commit"
+        git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
         git push
