--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -88,7 +88,7 @@ jobs:
 
         sed -i "s|image: .*|image: ${ECR_URL}:${{ env.BUILD_TAG }}|" kubernetes/frontend/deployment.yaml
 
-        git config --global user.email "mspr9773@gmail.com"
+        git config --global user.email "msuryaprasad11@gmail.com"
         git config --global user.name "M Surya Prasad"
         git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
