--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -90,7 +90,7 @@ jobs:
 
         git config --global user.email "msuryaprasad11@gmail.com"
         git config --global user.name "M Surya Prasad"
-        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PATT }}@github.com/${{ github.repository }}
 
         git add kubernetes/frontend/deployment.yaml
         git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
