--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'frontend/**'
+      - '.github/workflows/frontendci.yaml'  # Optional: allow CI config changes to trigger builds
 
 env:
   BUILD_TAG: ${{ github.run_number }}
@@ -29,7 +32,8 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: 3. Zip Frontend Files
-        run: zip -r frontend.zip static templates nginx.conf Dockerfile
+        working-directory: frontend
+        run: zip -r ../frontend.zip static templates nginx.conf Dockerfile
 
       - name: 4. Upload Artifact to S3
         run: |
@@ -37,6 +41,7 @@ jobs:
           aws s3 cp frontend.zip s3://$S3_BUCKET/frontend/$DATE/build-${{ env.BUILD_TAG }}.zip
 
       - name: 5. Build Docker Image
+        working-directory: frontend
         run: docker build -t dev/frontend .
 
       - name: 6. Tag Docker Image for ECR
@@ -88,7 +93,6 @@ jobs:
 
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "M Surya Prasad"
-
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
           git add kubernetes/frontend/deployment.yaml
