--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -125,7 +125,7 @@ jobs:
           git config --global user.name "M Surya Prasad"
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
-          git add backend/deployment.yaml
+          git add kubernetes/backend/deployment.yaml
           git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update backend image to ${{ env.BUILD_TAG }}"
           git push
         env:
