--- a/.github/workflows/backend-ci.yaml
+++ b/.github/workflows/backend-ci.yaml
@@ -10,7 +10,7 @@ on:
 
 permissions:
   contents: read
-  security-events: write  # Needed for CodeQL results upload
+  security-events: write  # Required for CodeQL upload
 
 env:
   BUILD_TAG: ${{ github.run_number }}
@@ -29,12 +29,12 @@ jobs:
       - name: 1. Checkout Code
         uses: actions/checkout@v4
 
-      - name: 2. Setup Python & Install Dependencies
+      - name: 2. Setup Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: 3. Install Python Requirements
+      - name: 3. Install Python Dependencies
         run: |
           python -m venv venv
           source venv/bin/activate
@@ -44,7 +44,7 @@ jobs:
       - name: 4. Run Unit Tests (Skipped)
         run: echo "🟡 No test cases running"
 
-      - name: 5. CodeQL Static Analysis Init
+      - name: 5. CodeQL Init
         uses: github/codeql-action/init@v2
         with:
           languages: python
@@ -52,7 +52,7 @@ jobs:
       - name: 6. CodeQL Analyze
         uses: github/codeql-action/analyze@v2
 
-      - name: 7. Zip & Upload Artifact to S3
+      - name: 7. Upload Artifact to S3
         run: |
           zip -r backend.zip backend
           DATE=$(date +%F)
@@ -64,10 +64,10 @@ jobs:
       - name: 8. Docker Build
         run: docker build -t dev/backend -f backend/Dockerfile .
 
-      - name: 9. Authenticate Docker to AWS ECR
+      - name: 9. Authenticate to AWS ECR
         run: |
           aws ecr get-login-password --region $AWS_REGION | \
-          docker login --username AWS --password-stdin 023703779855.dkr.ecr.ap-south-1.amazonaws.com
+          docker login --username AWS --password-stdin ${{ env.ECR_URI }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -77,7 +77,7 @@ jobs:
           docker tag dev/backend:latest $ECR_URI:latest
           docker tag dev/backend:latest $ECR_URI:${{ env.BUILD_TAG }}
 
-      - name: 11. Trivy Image Scan
+      - name: 11. Trivy Scan
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: ${{ env.ECR_URI }}:${{ env.BUILD_TAG }}
@@ -89,7 +89,7 @@ jobs:
           docker push $ECR_URI:latest
           docker push $ECR_URI:${{ env.BUILD_TAG }}
 
-      - name: 13. Run Backend App & Health Check
+      - name: 13. Run Backend & Health Check
         run: |
           pip install -r backend/requirements.txt
           cd backend
@@ -97,7 +97,7 @@ jobs:
           sleep 15
           curl -I http://localhost:5000 || echo "App not reachable"
 
-      - name: 🔍 Run OWASP ZAP Full Scan
+      - name: 🔍 OWASP ZAP Full Scan
         uses: zaproxy/action-full-scan@v0.12.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -119,7 +119,7 @@ jobs:
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           ECR_URL=$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO
 
-          sed -i "s|image: .*|image: ${ECR_URL}:${{ env.BUILD_TAG }}|" backend/deployment.yaml
+          sed -i "s|image: .*|image: ${ECR_URL}:${{ env.BUILD_TAG }}|" kubernetes/backend/deployment.yaml
 
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "M Surya Prasad"
