--- a/database/Dockerfile
+++ b/database/Dockerfile
@@ -1,16 +1,16 @@
-# Use official Python image
 FROM python:3.11-slim
 
 WORKDIR /app
 
-# Copy files
-COPY . /app
+# Copy requirements.txt first
+COPY database/requirements.txt ./requirements.txt
 
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Set env for unbuffered logs
-ENV PYTHONUNBUFFERED=1
+# Copy the rest of the database code
+COPY database/ .
 
-# Entry point
+EXPOSE 5000
+
 CMD ["python", "mysql.py"]
