--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -6,7 +6,7 @@ on:
       - main
     paths:
       - 'frontend/**'
-      - '.github/workflows/frontendci.yaml'  # Optional: allow CI config changes to trigger builds
+      - '.github/workflows/frontendci.yaml'
 
 env:
   BUILD_TAG: ${{ github.run_number }}
@@ -83,6 +83,13 @@ jobs:
             zap-report.html
             zap-report.json
 
+      - name: 🔑 Set up SSH for Git Push
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan github.com >> ~/.ssh/known_hosts
+
       - name: 10. Update K8s Deployment YAML & Git Push
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
@@ -92,8 +99,8 @@ jobs:
 
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "M Surya Prasad"
-          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
+          git remote set-url origin git@github.com:${{ github.repository }}.git
 
           git add kubernetes/frontend/deployment.yaml
           git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
-          git push
+          git push origin main
