--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -82,24 +82,15 @@ jobs:
             zap-report.html
             zap-report.json
 
-      - name: 🔑 Set up SSH for Git Push
-        run: |
-          mkdir -p ~/.ssh
-          printf "%s" "${{ secrets.ACTIONS_DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-
-      - name: 10. Update K8s Deployment YAML & Git Push
+      - name: 🔁 Update Frontend & Database K8s YAML & Push with PAT
         run: |
           ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
           ECR_URL=$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO
-
           sed -i "s|image: .*|image: ${ECR_URL}:${{ env.BUILD_TAG }}|" kubernetes/frontend/deployment.yaml
-
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "M Surya Prasad"
-          git remote set-url origin git@github.com:${{ github.repository }}.git
+          git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
           git add kubernetes/frontend/deployment.yaml
-          git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
-          git push origin main
+          git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend & database image to ${{ env.BUILD_TAG }}"
+          git push
