--- a/kubernetes/frontend/service.yaml
+++ b/kubernetes/frontend/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontend-svc
   namespace: quiz-app
 spec:
-  type: ClusterIP
-  ports:
-  - port: 80
-    targetPort: 80
   selector:
     role: frontend
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer  # Or use NodePort if on local cluster
