--- a/kubernetes/backend/service.yaml
+++ b/kubernetes/backend/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: api
+  name: backend-svc
   namespace: quiz-app
 spec:
-  type: ClusterIP
-  ports:
-  - port: 80
-    protocol: TCP
-    targetPort: 8080
   selector:
     role: api
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
+  type: ClusterIP
