--- a/kubernetes/frontend/service.yaml
+++ b/kubernetes/frontend/service.yaml
@@ -10,4 +10,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: LoadBalancer  # Or use NodePort if on local cluster
+  type: LoadBalancer
