--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -1,4 +1,4 @@
-name: Frontend AWS CI Pipeline
+name: Frontend GCP CI Pipeline
 
 on:
   push:
@@ -10,87 +10,47 @@ on:
 
 env:
   BUILD_TAG: ${{ github.run_number }}
+  GCP_REGION: us-central1
+  GAR_REPO: microservicequiz
+  GCP_PROJECT_ID: heroic-gamma-465105-c8
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
-    env:
-      AWS_REGION: ap-south-1
-      ECR_REPO: dev/frontend
-      S3_BUCKET: devvfrontend
-
     steps:
       - name: 1. Checkout Code
         uses: actions/checkout@v4
 
-      - name: 2. Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+      - name: 2. Set up Docker auth for GAR
+        run: |
+          echo '${{ secrets.GCP_SA_KEY }}' > $HOME/gcp-key.json
+          gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
+          gcloud config set project ${{ env.GCP_PROJECT_ID }}
+          gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev --quiet
 
-      - name: 3. Zip Frontend Files
+      - name: 3. Build Docker Image
         working-directory: frontend
-        run: zip -r ../frontend.zip static templates nginx.conf Dockerfile
-
-      - name: 4. Upload Artifact to S3
         run: |
-          DATE=$(date +%F)
-          aws s3 cp frontend.zip s3://$S3_BUCKET/frontend/$DATE/build-${{ env.BUILD_TAG }}.zip
+          docker build -t frontend .
 
-      - name: 5. Build Docker Image
-        working-directory: frontend
-        run: docker build -t dev/frontend .
-
-      - name: 6. Tag Docker Image for ECR
+      - name: 4. Tag & Push to Artifact Registry (GAR)
         run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          ECR_URI=$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO
-          docker tag dev/frontend:latest $ECR_URI:${{ env.BUILD_TAG }}
-          echo "ECR_URI=$ECR_URI" >> $GITHUB_ENV
+          GAR_IMAGE=${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPO }}/frontend:${{ env.BUILD_TAG }}
+          docker tag frontend $GAR_IMAGE
+          docker push $GAR_IMAGE
+          echo "GAR_IMAGE=$GAR_IMAGE" >> $GITHUB_ENV
 
-      - name: 7. Authenticate Docker to ECR
+      - name: 5. Update Frontend Deployment YAML
         run: |
-          aws ecr get-login-password --region $AWS_REGION | docker login --username AWS --password-stdin $ECR_URI
+          sed -i "s|image: .*|image: ${{ env.GAR_IMAGE }}|" kubernetes/frontend/deployment.yaml
 
-      - name: 8. Push Docker Image to ECR
+      - name: 6. Commit and Push Updated YAML
         run: |
-          docker push $ECR_URI:${{ env.BUILD_TAG }}
-
-      - name: 9. Start NGINX Frontend Container in Background
-        run: |
-          docker run -d -p 8080:80 --name frontend-test $ECR_URI:${{ env.BUILD_TAG }}
-          sleep 10
-          curl -I http://localhost:8080 || echo "NGINX app not reachable"
-
-      - name: 🔍 Run OWASP ZAP Full Scan
-        uses: zaproxy/action-full-scan@v0.12.0
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
-          target: 'http://host.docker.internal:8080'
-          cmd_options: '-a -r zap-report.html -J zap-report.json'
-
-      - name: 📋 Upload ZAP DAST Report
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: zap-dast-report
-          path: |
-            zap-report.html
-            zap-report.json
-
-      - name: 🔁 Update Frontend & Database K8s YAML & Push with PAT
-        run: |
-          ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-          ECR_URL=$ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com/$ECR_REPO
-          sed -i "s|image: .*|image: ${ECR_URL}:${{ env.BUILD_TAG }}|" kubernetes/frontend/deployment.yaml
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "M Surya Prasad"
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
           git add kubernetes/frontend/deployment.yaml
-          git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend & database image to ${{ env.BUILD_TAG }}"
+          git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
           git push
