--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -11,46 +11,74 @@ on:
 env:
   BUILD_TAG: ${{ github.run_number }}
   GCP_REGION: us-central1
-  GAR_REPO: microservicequiz
   GCP_PROJECT_ID: heroic-gamma-465105-c8
+  GAR_REPO: microservicequiz
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      GCS_BUCKET: devfrontend
+
     steps:
       - name: 1. Checkout Code
         uses: actions/checkout@v4
 
-      - name: 2. Set up Docker auth for GAR
+      - name: 2. Authenticate to Google Cloud
         run: |
           echo '${{ secrets.GCP_SA_KEY }}' > $HOME/gcp-key.json
           gcloud auth activate-service-account --key-file=$HOME/gcp-key.json
           gcloud config set project ${{ env.GCP_PROJECT_ID }}
           gcloud auth configure-docker ${{ env.GCP_REGION }}-docker.pkg.dev --quiet
 
-      - name: 3. Build Docker Image
+      - name: 3. Zip Frontend Files
         working-directory: frontend
-        run: |
-          docker build -t frontend .
+        run: zip -r ../frontend.zip static templates nginx.conf Dockerfile
 
-      - name: 4. Tag & Push to Artifact Registry (GAR)
+      - name: 4. Upload Artifact to GCS
         run: |
-          GAR_IMAGE=${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPO }}/frontend:${{ env.BUILD_TAG }}
-          docker tag frontend $GAR_IMAGE
-          docker push $GAR_IMAGE
-          echo "GAR_IMAGE=$GAR_IMAGE" >> $GITHUB_ENV
+          DATE=$(date +%F)
+          gsutil cp frontend.zip gs://$GCS_BUCKET/frontend/$DATE/build-${{ env.BUILD_TAG }}.zip
 
-      - name: 5. Update Frontend Deployment YAML
-        run: |
-          sed -i "s|image: .*|image: ${{ env.GAR_IMAGE }}|" kubernetes/frontend/deployment.yaml
+      - name: 5. Build Docker Image
+        working-directory: frontend
+        run: docker build -t frontend .
 
-      - name: 6. Commit and Push Updated YAML
+      - name: 6. Tag Docker Image for GAR
         run: |
+          GAR_URL=${{ env.GCP_REGION }}-docker.pkg.dev/${{ env.GCP_PROJECT_ID }}/${{ env.GAR_REPO }}/frontend
+          docker tag frontend $GAR_URL:${{ env.BUILD_TAG }}
+          echo "GAR_URL=$GAR_URL" >> $GITHUB_ENV
+
+      - name: 7. Push Docker Image to GAR
+        run: docker push $GAR_URL:${{ env.BUILD_TAG }}
+
+      - name: 8. Run OWASP ZAP Scan
+        uses: zaproxy/action-full-scan@v0.12.0
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
+          target: 'http://host.docker.internal:8080'
+          cmd_options: '-a -r zap-report.html -J zap-report.json'
+
+      - name: 📋 Upload ZAP DAST Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: zap-dast-report
+          path: |
+            zap-report.html
+            zap-report.json
+
+      - name: 9. Update K8s Deployment YAML & Push using PAT
+        run: |
+          sed -i "s|image: .*|image: ${GAR_URL}:${{ env.BUILD_TAG }}|" kubernetes/frontend/deployment.yaml
+
           git config --global user.email "mspr9773@gmail.com"
           git config --global user.name "M Surya Prasad"
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
           git add kubernetes/frontend/deployment.yaml
           git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
-          git push
+          git push origin main
