--- a/.github/workflows/frontendci.yaml
+++ b/.github/workflows/frontendci.yaml
@@ -80,5 +80,5 @@ jobs:
           git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/${{ github.repository }}
 
           git add kubernetes/frontend/deployment.yaml
-          git diff --cached --quiet && echo "🟡 No changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
+          git diff --cached --quiet && echo "🟡 Noo changes to commit" || git commit -m "Update frontend image to ${{ env.BUILD_TAG }}"
           git push origin main
